--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "gh-pages": "^5.0.0",
     "next": "13.2.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
